# water-timeseries-v2

./: .gitignore  Dockerfile  README.md  bDockerfile  cDockerfile  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  update_version.yml
argo_workflows/: water_timeseries.yaml
argo_workflows/utils/: download.yaml
docs/: examples.md  getting_started.md  index.md
docs/api/: dataset.md  downloader.md  index.md
src/water_timeseries/: __init__.py  breakpoint.py  dataset.py  downloader.py
src/water_timeseries/dashboard/: __init__.py  app.py  map_viewer.py
src/water_timeseries/scripts/: break_pipeline.py  cli.py  plot_pipeline.py
src/water_timeseries/utils/: __init__.py  cli.py  data.py  earthengine.py  io.py  plotting.py  plotting_dynamic.py  spatial.py  visualization.py
tests/: conftest.py  test_break_pipeline.py  test_breakpoints.py  test_downloader.py  test_loading.py  test_merge.py  test_normalization.py  test_plotting.py
tests/data/: lake_polygons.parquet
utils/: download_from_cloud.py  upload_to_cloud.py
