[project]
name = "water-timeseries"
version = "0.1.0"
description = "Toolbox to download, analyze, and visualize water area time-series"
readme = "README.md"
authors = [
    { name = "Ingmar Nitze", email = "ingmarnitze@gmail.com" }
]
requires-python = ">=3.11, <3.14"
dependencies = [
    "pip",
    "ipykernel",
    "jupyterlab",
    "pandas",
    "geopandas>=0.8.0",
    "xarray",
    "tqdm",
    "eemont",
    "geemap",
    "netcdf4",
    "python-geohash",
    "seaborn",
    "matplotlib",
    "cartopy",
    "shapely",
    "contextily",
    "jupyterlab",
    "pyarrow",
    "h3pandas",
    "h3<=3.6",
    "dask[dataframe]>=2024.12.1",
    "setuptools>=65.0",
    "wheel>=0.38.0",
    "twine>=4.0.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "gh>=0.0.4",
    "joblib>=1.4.2",
    "ray[default]>=2.40.0",
    "ffmpeg>=1.4",
    "xee>=0.0.19",
    "h5netcdf>=1.4.1",
    "zarr>=2.18.4",
    "opencv-python>=4.11.0.86",
    "statsmodels>=0.14.4",
    "scikit-learn>=1.6.1",
    "numpy<2",
    "basemap>=1.4.1",
    "plotly-geo>=1.0.0",
    "dask-geopandas>=0.4.2",
    "sklearn-xarray>=0.4.0",
    "lonboard>=0.12.1",
    "rbeast>=0.1.23",
    "ruff>=0.15.1",
    "loguru>=0.7.3",
    "typer>=0.24.1",
    "typer-config>=1.5.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0,<2.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.0",
    "mike[docs]>=2.1.3",
]

[project.scripts]
# water-timeseries = "water_timeseries:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# use ruff as the primary linter/formatter with compatibility to black/isort
# ruff will enforce the same line length and import sorting style
line-length = 120
extend-select = ["I"]
exclude = [".venv", "build", "dist", "__pycache__"]
extend-ignore = ["E203"]
