[project]
name = "water-timeseries"
version = "0.3.6"
description = "Toolbox to download, analyze, and visualize water area time-series"
readme = "README.md"
authors = [
    { name = "Ingmar Nitze", email = "ingmarnitze@gmail.com" }
]
requires-python = ">=3.11, <3.14"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "geopandas>=0.8.0",
    "xarray>=2023.0.0",
    "tqdm",
    "netcdf4",
    "python-geohash",
    "seaborn",
    "matplotlib>=3.8.0",
    "shapely",
    "contextily",
    "pyarrow",
    "h3pandas",
    "h3<=3.6",
    "dask[dataframe]>=2024.12.1",
    "joblib>=1.4.2",
    "ray[default]>=2.40.0",
    "h5netcdf>=1.4.1",
    "zarr>=2.18.4",
    "opencv-python>=4.11.0.86",
    "statsmodels>=0.14.4",
    "scikit-learn>=1.6.1",
    "basemap>=1.4.1",
    "plotly-geo>=1.0.0",
    "dask-geopandas>=0.4.2",
    "sklearn-xarray>=0.4.0",
    "rbeast>=0.1.23",
    "loguru>=0.7.3",
    "typer>=0.24.1",
    "typer-config>=1.5.0",
    "lz4>=4.4.5",
    "ipykernel",
    "jupyterlab",
    "cyclopts>=4.8.0",
    "rich>=14.3.3",
    "nbconvert>=7.17.0",
    "tk>=0.1.0",
    "geemap>=0.37.1",
    "eemont>=2025.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "ruff>=0.15.1",
    "setuptools>=65.0",
    "wheel>=0.38.0",
    "twine>=4.0.0",
    "gh>=0.0.4",
]
docs = [
    "mkdocs>=1.5.0,<2.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.0",
    "mike>=2.1.3",
]

[project.scripts]
water-timeseries-bp = "water_timeseries.scripts.break_pipeline:main"
water-timeseries-plot = "water_timeseries.scripts.plot_pipeline:main"
water-timeseries = "water_timeseries.scripts.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# use ruff as the primary linter/formatter with compatibility to black/isort
# ruff will enforce the same line length and import sorting style
line-length = 120
extend-select = ["I"]
exclude = [".venv", "build", "dist", "__pycache__"]
extend-ignore = ["E203"]

[tool.pytest.ini_options]
# Pytest configuration for water-timeseries

# Test discovery
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Output options
addopts = "-v --strict-markers"

# Markers for test categorization
markers = [
    "loading: Tests for dataset loading",
    "normalization: Tests for data normalization",
    "plotting: Tests for plotting functionality",
]

# Filter out third-party deprecation warnings
filterwarnings = [
    "ignore::DeprecationWarning:matplotlib._fontconfig_pattern",
    "ignore::DeprecationWarning:matplotlib._mathtext",
    "ignore:parseString.*:DeprecationWarning",
    "ignore:enablePackrat.*:DeprecationWarning",
]

# Console output
testpaths = ["tests"]
